--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ matplotlib
 beautifulsoup4      
 requests            
 lxml                
-python-dotenv   
+python-dotenv
+fuzzywuzzy
+python-Levenshtein
